// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingCard ShoppingCard Render with empty data 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered card"
    data-testid="click"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-image"
        style="width: 200px; height: 200px;"
      >
        <img
          class="ant-image-img"
          src="error"
          style="height: 200px;"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
      <div
        class="wrapper-title"
      >
        <div
          class="title"
        >
          <span
            class="ant-typography"
          />
        </div>
        <span
          class="ant-typography percentage"
        >
          SKU: 
          -
        </span>
        <span
          class="ant-typography description"
        >
          Deskripsi: 
        </span>
        <div>
          -
        </div>
      </div>
      <div
        class="wrapper-cost"
      />
      <div
        class="row"
      >
        <div
          class="wrapper-location"
        >
          <div>
            <span
              aria-label="stock"
              class="anticon anticon-stock"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="stock"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M904 747H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM165.7 621.8l39.7 39.5c3.1 3.1 8.2 3.1 11.3 0l234.7-233.9 97.6 97.3a32.11 32.11 0 0045.2 0l264.2-263.2c3.1-3.1 3.1-8.2 0-11.3l-39.7-39.6a8.03 8.03 0 00-11.3 0l-235.7 235-97.7-97.3a32.11 32.11 0 00-45.2 0L165.7 610.5a7.94 7.94 0 000 11.3z"
                />
              </svg>
            </span>
            <span
              class="ant-typography name"
            >
              Stok: 
              0
            </span>
          </div>
          <div>
            <span
              aria-label="environment"
              class="anticon anticon-environment"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="environment"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                />
              </svg>
            </span>
            <span
              class="ant-typography name"
            >
              Terjual: 
            </span>
          </div>
        </div>
        <div
          class="wrapper-price"
        >
          <span
            class="ant-typography price"
            data-testid="currency"
          >
            Rp 0
          </span>
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="ant-btn ant-btn-primary"
          data-testid="add"
          type="button"
        >
          <span>
            Add to Chart
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShoppingCard ShoppingCard Render with loading false 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered card"
    data-testid="click"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-image"
        style="width: 200px; height: 200px;"
      >
        <img
          class="ant-image-img"
          src="error"
          style="height: 200px;"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
      <div
        class="wrapper-title"
      >
        <div
          class="title"
        >
          <span
            class="ant-typography"
          >
            Title
          </span>
        </div>
        <span
          class="ant-typography percentage"
        >
          SKU: 
          -
        </span>
        <span
          class="ant-typography description"
        >
          Deskripsi: 
        </span>
        <div>
          -
        </div>
      </div>
      <div
        class="wrapper-cost"
      />
      <div
        class="row"
      >
        <div
          class="wrapper-location"
        >
          <div>
            <span
              aria-label="stock"
              class="anticon anticon-stock"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="stock"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M904 747H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM165.7 621.8l39.7 39.5c3.1 3.1 8.2 3.1 11.3 0l234.7-233.9 97.6 97.3a32.11 32.11 0 0045.2 0l264.2-263.2c3.1-3.1 3.1-8.2 0-11.3l-39.7-39.6a8.03 8.03 0 00-11.3 0l-235.7 235-97.7-97.3a32.11 32.11 0 00-45.2 0L165.7 610.5a7.94 7.94 0 000 11.3z"
                />
              </svg>
            </span>
            <span
              class="ant-typography name"
            >
              Stok: 
              10000
            </span>
          </div>
          <div>
            <span
              aria-label="environment"
              class="anticon anticon-environment"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="environment"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                />
              </svg>
            </span>
            <span
              class="ant-typography name"
            >
              Terjual: 
              100
            </span>
          </div>
        </div>
        <div
          class="wrapper-price"
        >
          <span
            class="ant-typography price"
            data-testid="currency"
          >
            Rp 5.000
          </span>
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="ant-btn ant-btn-primary"
          data-testid="add"
          type="button"
        >
          <span>
            Add to Chart
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShoppingCard ShoppingCard Render with loading true 1`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered card"
    data-testid="click"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-active"
      >
        <div
          class="ant-skeleton-content"
        >
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width: 61%;"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
